Fixed PSR-4 namespace packagist error.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
     "minimum-stability": "beta",
 
     "autoload": {
-        "psr-4": { "Oneup\\UploaderBundle": "" }
+        "psr-4": { "Oneup\\UploaderBundle\\": "" }
     }
 }
